add JDateTimePicker into Them Can Bo

--- a/src/project/company/management/view/ThemCB.form
+++ b/src/project/company/management/view/ThemCB.form
@@ -64,20 +64,20 @@
                           <Component id="jRBNu" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
-                          <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                              <Component id="txtDob" max="32767" attributes="0"/>
-                              <Component id="jComboBox1" pref="217" max="32767" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="jComboBox1" min="-2" pref="217" max="-2" attributes="0"/>
+                              <Component id="add_date_panel" alignment="0" min="-2" pref="149" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Group type="102" attributes="0">
+                              <Group type="102" alignment="0" attributes="0">
                                   <Component id="jlbDay" min="-2" pref="132" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="64" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
                                   <Component id="txtDay" min="-2" pref="204" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="1" attributes="0">
                                   <Component id="jlbChange" max="32767" attributes="0"/>
-                                  <EmptySpace max="-2" attributes="0"/>
+                                  <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Component id="txtChange" min="-2" pref="204" max="-2" attributes="0"/>
                               </Group>
                           </Group>
@@ -90,7 +90,7 @@
                       <Component id="addButton" min="-2" pref="156" max="-2" attributes="0"/>
                       <Component id="resetButton" min="-2" pref="156" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="137" max="32767" attributes="0"/>
+                  <EmptySpace pref="179" max="32767" attributes="0"/>
               </Group>
               <Component id="jScrollPane1" alignment="0" max="32767" attributes="0"/>
           </Group>
@@ -112,17 +112,24 @@
                       <Component id="txtName" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
                       <Component id="jlbName" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="txtDob" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
-                      <Component id="jlbDob" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
-                      <Component id="jlbDay" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
-                      <Component id="txtDay" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
-                      <Component id="addButton" alignment="3" min="-2" pref="54" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="102" attributes="0">
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="jlbDob" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
+                              <Component id="jlbDay" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
+                              <Component id="txtDay" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
+                              <Component id="addButton" alignment="3" min="-2" pref="54" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+                          <Component id="add_date_panel" min="-2" pref="30" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jlbChucVu" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
                               <Component id="jComboBox1" alignment="3" min="-2" pref="48" max="-2" attributes="0"/>
@@ -140,7 +147,7 @@
                           <Component id="resetButton" min="-2" pref="55" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace pref="52" max="32767" attributes="0"/>
+                  <EmptySpace pref="11" max="32767" attributes="0"/>
                   <Component id="jScrollPane1" min="-2" pref="438" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -177,9 +184,6 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtID">
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtIDActionPerformed"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jlbID1">
           <Properties>
@@ -191,9 +195,6 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtName">
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtNameActionPerformed"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jlbDob">
           <Properties>
@@ -203,11 +204,6 @@
             <Property name="horizontalAlignment" type="int" value="2"/>
             <Property name="text" type="java.lang.String" value="Ng&#xe0;y sinh:"/>
           </Properties>
-        </Component>
-        <Component class="javax.swing.JTextField" name="txtDob">
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtDobActionPerformed"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jlbDay">
           <Properties>
@@ -219,9 +215,6 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtDay">
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtDayActionPerformed"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jlbGender">
           <Properties>
@@ -265,20 +258,15 @@
         </Component>
         <Component class="javax.swing.JComboBox" name="jComboBox1">
           <Properties>
-            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="5">
-                <StringItem index="0" value="M&#x1edd;i b&#x1ea1;n ch&#x1ecd;n ch&#x1ee9;c v&#x1ee5; !"/>
-                <StringItem index="1" value="Gi&#xe1;m &#x110;&#x1ed1;c"/>
-                <StringItem index="2" value="Tr&#x1b0;&#x1edf;ng Ph&#xf2;ng"/>
-                <StringItem index="3" value="Nh&#xe2;n Vi&#xea;n"/>
-                <StringItem index="4" value=" "/>
-              </StringArray>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="new javax.swing.DefaultComboBoxModel&lt;&gt;(new String[] { &quot;M&#x1edd;i b&#x1ea1;n ch&#x1ecd;n ch&#x1ee9;c v&#x1ee5; !&quot;, &quot;Gi&#xe1;m &#x110;&#x1ed1;c&quot;, &quot;Tr&#x1b0;&#x1edf;ng Ph&#xf2;ng&quot;, &quot;Nh&#xe2;n Vi&#xea;n&quot;})" type="code"/>
             </Property>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jComboBox1ActionPerformed"/>
           </Events>
           <AuxValues>
+            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JComboBox&lt;&gt;()"/>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
         </Component>
@@ -292,9 +280,6 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtAddress">
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtAddressActionPerformed"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jlbChange">
           <Properties>
@@ -306,9 +291,6 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtChange">
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtChangeActionPerformed"/>
-          </Events>
         </Component>
         <Container class="javax.swing.JScrollPane" name="jScrollPane1">
           <Properties>
@@ -379,6 +361,16 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="resetButtonActionPerformed"/>
           </Events>
         </Component>
+        <Container class="javax.swing.JPanel" name="add_date_panel">
+          <Properties>
+            <Property name="autoscrolls" type="boolean" value="true"/>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Hand Cursor"/>
+            </Property>
+          </Properties>
+
+          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
+        </Container>
       </SubComponents>
     </Container>
   </SubComponents>
