--- a/src/project/company/management/view/XoaCB.form
+++ b/src/project/company/management/view/XoaCB.form
@@ -43,7 +43,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <Component id="kGradientPanel1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="kGradientPanel2" pref="758" max="32767" attributes="0"/>
+                  <Component id="kGradientPanel2" min="-2" pref="758" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
