--- a/src/project/company/management/view/SuaCB.form
+++ b/src/project/company/management/view/SuaCB.form
@@ -195,7 +195,7 @@
                               <EmptySpace min="-2" pref="162" max="-2" attributes="0"/>
                               <Component id="btnUpdate" min="-2" pref="161" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="194" max="-2" attributes="0"/>
-                              <Component id="btnUpdate1" min="-2" pref="161" max="-2" attributes="0"/>
+                              <Component id="btnRefresh" min="-2" pref="161" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
@@ -255,7 +255,7 @@
                       <EmptySpace pref="46" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="btnUpdate" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="btnUpdate1" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnRefresh" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="90" max="-2" attributes="0"/>
                   </Group>
@@ -443,7 +443,7 @@
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
               </AuxValues>
             </Component>
-            <Component class="com.k33ptoo.components.KButton" name="btnUpdate1">
+            <Component class="com.k33ptoo.components.KButton" name="btnRefresh">
               <Properties>
                 <Property name="text" type="java.lang.String" value="L&#xe0;m m&#x1edb;i"/>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -451,7 +451,7 @@
                 </Property>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnUpdate1ActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRefreshActionPerformed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="txtChange">
